add Noise Reduce
Co-authored-by: Lewiezhu <Lewiezhu@users.noreply.github.com>

--- a/readme
+++ b/readme
@@ -1,3 +1,8 @@
 Commands
+
+Start application
 - venv\Scripts\activate  
 - python -m flask --app .\speech-to-text.py run
+
+setup
+- pip install noisereduce
