--- a/readme
+++ b/readme
@@ -1,10 +1,10 @@
-Commands
+# Commands
 
-Start application
+## Start application
 - .venv\Scripts\activate  
 - python -m flask --app .\speech-to-text.py run
 
-setup
+## setup
 - pip install noisereduce
 - pip install SpeechRecognition
 - pip install pyaudio
@@ -13,6 +13,6 @@ setup
 - python -m pip install flask
 
 
-Downgrade Numpy to version <2.0
+### Downgrade Numpy to version <2.0
 - pip uninstall numpy
 - pip install numpy<2.0.0
